o.9.3.1 fixes